--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html>
 <html>
 <head>
-  <title>My first styled page</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <title>tarrow</title>
 </head>
-
+<body style="background-color:#9e7c64;">
 <body>
 
-<!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="www.7k7k.com">Home page</a>
-  <li><a href="musings.html">Musings</a>
-  <li><a href="town.html">My town</a>
-  <li><a href="links.html">Links</a>
-</ul>
+<h1 style="color:white;text-align:center;">
+  <p>ECHOES FROM THE UNIVERSE</p>
+<h4 style="color:white;text-align:center;">
+  <p>Wanna know about your position in the whole universe ?</p>
+  <p>Pick a card for you and type it down.</p>
+  <p>(please pay attention to the use of capital and small letter)</p>
+  <input id="ip"/>
 
-<!-- Main content -->
-<h1>My first styled page</h1>
+  <button onclick="pickone()">see what</button>
 
-<p>Welcome to my styled page!
 
-<p>It lacks images, but at least it has style.
-And it has links, even if they don't go
-anywhere&hellip;
 
-<p>There should be more here, but I don't know
-what yet.
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 5 April 2004<br>
-  by myself.</address>
+<script src="tarrow.js">  </script>
+
+  <style type ="css">
+
+  .myban{
+    width:400px;
+    height:300px;
+    border:1px solid#ccc;
+    margin-left:10px;
+    margin-right:10px;
+  }
+
+  </style>
+<div class="myban">
+<img src="hw1-A.png" ></img>
+<img src="hw1-B.png" ></img>
+<img src="hw1-C.png" ></img>
+
+</div>
 
 </body>
 </html>
